<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detalle"
    android:orientation="vertical"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/carFoto"
        android:layout_width="190dp"
        android:layout_height="230dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="8sp"
        app:cardElevation="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="16dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16sp"
            android:orientation="vertical">
    <ImageView
        android:id="@+id/imgFoto"
        android:layout_width="190dp"
        android:layout_height="225dp"
        android:layout_gravity="center"
        android:contentDescription="@null"
        android:src="@drawable/alexander" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:gravity="center"
        android:text="@string/tvNombre"
        android:textColor="#0E0A0A"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text=""
        android:textColor="#013863"
        android:textSize="30sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tvCiudad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text="@string/tvCiudad"
        android:textColor="#0E0A0A"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txciudad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text=""
        android:textColor="#013863"
        android:textSize="20sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tvMatricula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text="@string/tvMatricula"
        android:textColor="#0E0A0A"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txMatricula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text=""
        android:textColor="#013863"
        android:textSize="20sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tvExpresion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text="@string/tvExpresion"
        android:textColor="#0E0A0A"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txExpresion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="fill_horizontal"
        android:maxLength="600"
        android:minLines="200"
        android:scrollbars="horizontal"
        android:text=""
        android:textColor="#013863"
        android:textSize="15sp" />
</LinearLayout>