<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".Principal">

    <RelativeLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0sp">

        <TextView
            android:id="@+id/txGrid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/tvGrid"
            android:textColor="@android:color/white"
            android:textSize="30sp" />
    </RelativeLayout>
    <GridLayout
        android:columnCount="2"
        android:rowCount="2"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:layout_weight="8"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="14dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/carAgregar"
            android:layout_width="160dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16sp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="8sp"
            app:cardElevation="8sp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16sp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgPrimero"
                    android:layout_width="120dp"
                    android:layout_height="130dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@null"
                    android:src="@drawable/add1" />
                <TextView
                    android:id="@+id/tvNuevo"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_margin="2dp"
                    android:gravity="center"
                    android:text="@string/txNuevo"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/carMiembros"
            android:layout_width="160dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16sp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="8sp"
            app:cardElevation="8sp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16sp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="130dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@null"
                    android:src="@drawable/member1" />
                <TextView
                    android:id="@+id/tvMiembro"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_margin="2dp"
                    android:gravity="center"
                    android:text="@string/txMiembros"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/carEliminar"
            android:layout_width="160dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16sp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="8sp"
            app:cardElevation="8sp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16sp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="130dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@null"
                    android:src="@drawable/eliminar" />
                <TextView
                    android:id="@+id/tvEliminar"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_margin="2dp"
                    android:gravity="center"
                    android:text="@string/txEliminar"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/carAjuste"
            android:layout_width="160dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16sp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="8sp"
            app:cardElevation="8sp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16sp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="130dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@null"
                    android:src="@drawable/actualizar" />
                <TextView
                    android:id="@+id/tvActualizar"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_margin="2dp"
                    android:gravity="center"
                    android:text="@string/txActualizar"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>

</LinearLayout>